# adventofcode

./: Makefile  README.md  pyproject.toml
src/adventofcode/scripts/: generate_readme.py
src/adventofcode/year_2021/: day_18_2021.py
src/adventofcode/year_2022/: README.md  day_01_2022.py  day_02_2022.py  day_03_2022.py  day_04_2022.py  day_05_2022.py  day_06_2022.py  day_07_2022.py  day_08_2022.py  day_09_2022.py
src/adventofcode/year_2023/: day_01_2023.py  day_02_2023.py  day_03_2023.py  day_04_2023.py  day_05_2023.py  day_06_2023.py  day_07_2023.py  day_08_2023.py  day_09_2023.py
src/adventofcode/year_2025/: day_01_2025.py  day_02_2025.py  day_03_2025.py  day_04_2025.py  day_05_2025.py  day_06_2025.py  day_07_2025.py  day_08_2025.py  day_09_2025.py  day_10_2025.py  day_11_2025.py  day_12_2025.py
tests/adventofcode/year_2022/: test_day_01_2022.py  test_day_02_2022.py  test_day_03_2022.py  test_day_04_2022.py  test_day_05_2022.py  test_day_06_2022.py  test_day_07_2022.py  test_day_08_2022.py  test_day_09_2022.py
tests/adventofcode/year_2023/: test_day_01_2023.py  test_day_02_2023.py  test_day_03_2023.py  test_day_04_2023.py  test_day_05_2023.py  test_day_06_2023.py  test_day_07_2023.py  test_day_08_2023.py  test_day_09_2023.py
tests/adventofcode/year_2025/: test_day_01_2025.py  test_day_02_2025.py  test_day_03_2025.py  test_day_04_2025.py  test_day_05_2025.py  test_day_06_2025.py  test_day_07_2025.py  test_day_08_2025.py  test_day_09_2025.py  test_day_10_2025.py  test_day_11_2025.py
