[tool.poetry]
name = "adventofcode"
version = "1.10.0"
description = "A collection of Advent of Code solutions"
authors = ["Marcel Blijleven <marcelblijleven@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
rich = "^13.9.4"


[tool.poetry.scripts]
add-day = "adventofcode.scripts.add_day:add_day"
clean-repo = "adventofcode.scripts.clean_repo:clean_repo"
generate-benchmarks = "adventofcode.scripts.benchmarks:generate_benchmarks"
generate-readme = "adventofcode.scripts.generate_readme:generate_readme"
run-all = "adventofcode.scripts.runner:run_all"

[tool.poetry.group.dev.dependencies]
httpx = "^0.28.1"
coverage = { extras = ["toml"], version = "^7.6.9" }
pytest = "^8.4.2"
pytest-cov = "^6.1.0"
pytest-mock = "^3.14.0"
ruff = "^0.8.3"
mypy = "^1.14.1"
commitizen = "^4.1.1"
pre-commit = "^3.8.1"

[tool.ruff]

[tool.coverage.run]
source_pkgs = ["adventofcode", "tests"]
branch = true
parallel = true
omit = ["src/adventofcode/__about__.py"]

[tool.coverage.paths]
adventofcode = ["src/adventofcode", "*/adventofcode/arc/adventofcode"]
tests = ["tests", "*/adventofcode/tests"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == __main__:", "if TYPE_CHECKING:"]

[tool.commitizen]
tag_format = "v$version"
version = "2.0.0"
version_files = ["src/adventofcode/__about__.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
